tests/error/linear_region_branch_partial.vow
// TEST: error-code RegionLinear
// TEST: stderr-json x['span']['length'] > 0
module LinearRegionBranchPartial

linear struct Handle {
    fd: i64,
}

fn choose(h: Handle, c: bool) -> Handle {
    if c {
        return h;
    }
    Handle { fd: 2 }
}
